<resources>
    <string name="app_name">CicloVida2</string>
    <string name="action_settings">Settings</string>
    <string name="provincia">Provincia</string>
    <string name="localidad">Localidad</string>
    <string name="provincia_prompt">Elija una provincia</string>
    <string name="localidad_prompt">Elija una localidad</string>
    <string name="comprobar">Comprobar</string>
    <string name="message">Ha seleccionado %1$s (%2$s)</string>
</resources>
